// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FrameRegisters should render registers 1`] = `
Array [
  <RegisterValue
    value="0x00007fff9300bf70"
  />,
  <RegisterValue
    value="0xffffffffffffffff"
  />,
  <RegisterValue
    value="0x0000000000000000"
  />,
]
`;

exports[`FrameRegisters should skip registers without a value 1`] = `
Array [
  <RegisterValue
    value="0x00007fff9300bf70"
  />,
  <RegisterValue
    value="0x0000000000000000"
  />,
]
`;
